deployment/grafana.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  selector:
    app: grafana
  ports:
  - port: 3000
    name: http
  type: LoadBalancer
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
        version: v1
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-config-volume
          mountPath: /etc/grafana/provisioning/datasources/datasource.yml
          subPath: datasource.yml
      volumes:
      - name: grafana-config-volume
        configMap:
          name: grafana-config
      restartPolicy: Always
---
